# rasta-protocol

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  config.cfg  rasta-docker.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml
cmake/: CompileOptions.cmake
config/: rasta_client2.cfg  rasta_client2_local.cfg  rasta_java.cfg  rasta_server.cfg
examples/: CMakeLists.txt
examples/config/: example_rasta_config.cfg  rasta_client1.cfg  rasta_client1_local.cfg  rasta_server_local.cfg  rasta_wrapper.cfg
examples/examples_localhost/c/: event_test.c  rasta.c  scils.c  scip.c
examples/localhost/c/: event_test.c  rasta.c  scip.c
examples/logging_example/c/: main.c
examples/mux_stresstest/c/: main.c
examples/rasta/c/: main.c
examples/rasta_example_new/: CMakeLists.txt
examples/rasta_example_new/c/: main.c
examples/rasta_grpc_bridge/cpp/: main.cpp
examples/rasta_grpc_bridge/proto/: rasta.proto
examples/redundancy_test/c/: main.c
examples/scils_example/: CMakeLists.txt
examples/scils_example/c/: main.c
examples/scip_example/: CMakeLists.txt
examples/scip_example/c/: main.c
examples/wrapperTestClient/c/: main.c
java/: build.gradle
java/rastawrapper/c/: RastaNative.c
java/sciJavaCom/c/: main.c
java/wrapperTestClient/c/: main.c
md_doc/: cunit.md  docker.md  getting_started.md  gradle.md  raspberry_pi.md
src/: CMakeLists.txt
src/examples_localhost/c/: event_test.c  rasta.c  scils.c
src/mux_stresstest/c/: main.c
src/rasta/c/: config.c  dictionary.c  event_system.c  fifo.c  logging.c  rasta_lib.c  rasta_new.c  rasta_red_multiplexer.c  rastablake2.c  rastacrc.c  rastadeferqueue.c  rastafactory.c  rastahandle.c  rastahashing.c  rastalist.c  rastamd4.c  rastamodule.c  rastaredundancy_new.c  rastasiphash24.c  rastautil.c  rmemory.c  udp.c
src/rasta/headers/: config.h  dictionary.h  event_system.h  fifo.h  logging.h  rasta_lib.h  rasta_new.h  rasta_red_multiplexer.h  rastablake2.h  rastacrc.h  rastadeferqueue.h  rastafactory.h  rastahandle.h  rastahashing.h  rastalist.h  rastamd4.h  rastamodule.h  rastaredundancy_new.h  rastasiphash24.h  rastautil.h  rmemory.h  udp.h
src/rastaTest/c/: blake2test.c  configtest.c  dictionarytest.c  fifotest.c  rastafactoryTest.c  rastamd4Test.c  rastamoduleTest.c  registerTests.c  siphash24test.c
src/rastaTest/headers/: configtest.h  dictionarytest.h  rastadeferqueueTest.h  rastafactoryTest.h  registerTests.h
src/rasta_example_new/c/: main.c
src/rastawrapper/headers/: RastaNative.h
src/sci/c/: hashmap.c  sci.c  sci_telegram_factory.c  scils.c  scils_telegram_factory.c  scip.c  scip_telegram_factory.c
src/sci/headers/: hashmap.h  sci.h  sci_telegram_factory.h  scils.h  scils_telegram_factory.h  scip.h  scip_telegram_factory.h
src/sciTest/c/: registerTests.c  sciTests.c  scilsTests.c  scipTests.c
src/sciTest/headers/: registerTests.h  scilsTests.h
src/scils_example/c/: main.c
src/scip_example/c/: main.c
src/tests_manual/c/: raw_udp_test.c
test/: CMakeLists.txt
test/rastaTest/c/: blake2test.c  configtest.c  dictionarytest.c  rastacrcTest.c  rastalisttest.c  rastamd4Test.c  registerTests.c
test/rastaTest/headers/: blake2test.h  rastacrcTest.h  rastalisttest.h  rastamd4Test.h  rastamoduleTest.h  registerTests.h
test/redundancy_test/c/: main.c
test/sciTest/c/: registerTests.c  sciTests.c  scilsTests.c  scipTests.c
test/sciTest/headers/: registerTests.h
tests/: CMakeLists.txt
tests/rasta/c/: configtest.c  fifotest.c  rastacrcTest.c  rastadeferqueueTest.c  rastafactoryTest.c  rastalisttest.c  rastamd4Test.c  rastamoduleTest.c  registerTests.c
tests/rasta/headers/: fifotest.h  siphash24test.h
tests/sci/c/: sciTests.c  scipTests.c
tests/sci/headers/: sciTests.h  scipTests.h
